EATS/k8s/eats/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: eats-deployment
  namespace: eats

spec:
  replicas: 2

  selector:
    matchLabels:
      app: eats

  template:
    metadata:
      labels:
        app: eats

    spec:
      containers:
        - name: eats

          image: singyabhalse/eats:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8082
