EATS/k8s/eats/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: eats-service
  namespace: eats

spec:
  type: NodePort

  selector:
    app: eats

  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30082
