EATS/k8s/eats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: eats-ingress
  namespace: eats

spec:
  ingressClassName: nginx

  rules:
    - host: eats.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: eats-service
                port:
                  number: 8082
